--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,17 @@
 </head>
 <body>
 	<input type="text" id="info">
-	<button id="valider">Go</button>
+	<button id="valider">Valider</button>
 	<div id="infoAfficher">
-		Bonjour 
-		<ul id="list">
-			
+			<ul id="list">
+			Bonjour
 		</ul>
+		</div>
+
+	
+	<div id="etapeSearch">
+	<input type="search" id="infoSearch">
+	<button id="search">Search</button>
 	</div>
 	
 <script src="app.js"></script>	
