--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 	<input type="search" id="infoSearch">
 	<button id="search">Search</button>
 	</div>
+	<div id="h"></div>
 	
 <script src="app.js"></script>	
 </body>
